--- a/Nutricion.csproj
+++ b/Nutricion.csproj
@@ -65,6 +65,7 @@
     <Compile Include="IFacade.cs" />
     <Compile Include="IIndiceMetabolicoBasal.cs" />
     <Compile Include="Mixta.cs" />
+    <Compile Include="Mujer.cs" />
     <Compile Include="Paciente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -97,7 +98,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Xslt\Nutricion.xslt" />
+    <Content Include="Xslt\Nutricion.xslt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
